src/app-groups/elk/apps/kibana/ubuntu/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  template:
    spec:
      containers:
        - name: kibana
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
